LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/GM_INTER_SERV_UNTS__x.object-meta.xml
<CustomObject>
    <description>GM_INTER_SERV_UNTS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_INTER_SERV_UNTS</externalName>
    <label>GM_INTER_SERV_UNTS</label>
    <pluralLabel>GM_INTER_SERV_UNTS</pluralLabel>
</CustomObject>