LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/DEFAULT_RU_AC__c.field-meta.xml
<CustomField>
    <fullName>DEFAULT_RU_AC__c</fullName>
    <description>DEFAULT_RU_AC</description>
    <externalDeveloperName>DEFAULT_RU_AC</externalDeveloperName>
    <label>DEFAULT_RU_AC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>