LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/INTER_SER_DESC__c.field-meta.xml
<CustomField>
    <fullName>INTER_SER_DESC__c</fullName>
    <description>INTER_SER_DESC</description>
    <externalDeveloperName>INTER_SER_DESC</externalDeveloperName>
    <label>INTER_SER_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>