LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/INTER_SER_MID__c.field-meta.xml
<CustomField>
    <fullName>INTER_SER_MID__c</fullName>
    <description>INTER_SER_MID</description>
    <externalDeveloperName>INTER_SER_MID</externalDeveloperName>
    <label>INTER_SER_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>