LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/IS_SHARED__c.field-meta.xml
<CustomField>
    <fullName>IS_SHARED__c</fullName>
    <description>IS_SHARED</description>
    <externalDeveloperName>IS_SHARED</externalDeveloperName>
    <label>IS_SHARED</label>
    <length>2</length>
    <type>Text</type>
</CustomField>