LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/ISNC__c.field-meta.xml
<CustomField>
    <fullName>ISNC__c</fullName>
    <description>ISNC</description>
    <externalDeveloperName>ISNC</externalDeveloperName>
    <label>ISNC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>