LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/ISU_HEAD_ID__c.field-meta.xml
<CustomField>
    <fullName>ISU_HEAD_ID__c</fullName>
    <description>ISU_HEAD_ID</description>
    <externalDeveloperName>ISU_HEAD_ID</externalDeveloperName>
    <label>ISU_HEAD_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>