LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/MIS_SME_GROUP__c.field-meta.xml
<CustomField>
    <fullName>MIS_SME_GROUP__c</fullName>
    <description>MIS_SME_GROUP</description>
    <externalDeveloperName>MIS_SME_GROUP</externalDeveloperName>
    <label>MIS_SME_GROUP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>