LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/PCPL_ID__c.field-meta.xml
<CustomField>
    <fullName>PCPL_ID__c</fullName>
    <description>PCPL_ID</description>
    <externalDeveloperName>PCPL_ID</externalDeveloperName>
    <label>PCPL_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>