LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/REGION__c.field-meta.xml
<CustomField>
    <fullName>REGION__c</fullName>
    <description>REGION</description>
    <externalDeveloperName>REGION</externalDeveloperName>
    <label>REGION</label>
    <length>8</length>
    <type>Text</type>
</CustomField>