LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/SERV_LINE_ID__c.field-meta.xml
<CustomField>
    <fullName>SERV_LINE_ID__c</fullName>
    <description>SERV_LINE_ID</description>
    <externalDeveloperName>SERV_LINE_ID</externalDeveloperName>
    <label>SERV_LINE_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>