LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/SMEG_MGMT_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>SMEG_MGMT_REPORTING__c</fullName>
    <description>SMEG_MGMT_REPORTING</description>
    <externalDeveloperName>SMEG_MGMT_REPORTING</externalDeveloperName>
    <label>SMEG_MGMT_REPORTING</label>
    <length>100</length>
    <type>Text</type>
</CustomField>