LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/SMG_NATIONAL__c.field-meta.xml
<CustomField>
    <fullName>SMG_NATIONAL__c</fullName>
    <description>SMG_NATIONAL</description>
    <externalDeveloperName>SMG_NATIONAL</externalDeveloperName>
    <label>SMG_NATIONAL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>