LinKreta_POC_Repository/force-app/main/default/objects/GM_INTER_SERV_UNTS__x/fields/TALLYCOSTCENTER__c.field-meta.xml
<CustomField>
    <fullName>TALLYCOSTCENTER__c</fullName>
    <description>TALLYCOSTCENTER</description>
    <externalDeveloperName>TALLYCOSTCENTER</externalDeveloperName>
    <label>TALLYCOSTCENTER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>